[gd_scene load_steps=8 format=2]

[ext_resource path="res://Art/Shadow-Sheet.png" type="Texture" id=1]
[ext_resource path="res://Art/FallingRock-Sheet.png" type="Texture" id=2]
[ext_resource path="res://Scripts/MapScripts/Rocks.gd" type="Script" id=3]

[sub_resource type="CanvasItemMaterial" id=1]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id=2]
light_mode = 2

[sub_resource type="CapsuleShape2D" id=3]
radius = 8.83865
height = 7.73845

[sub_resource type="Animation" id=4]
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Shadow:frame")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 5, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Shadow2:frame")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 5, 2 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Rock:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -1.5, -500 ), Vector2( -1.5, -1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Rock:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.4, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0, 0, 12 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Shadow2:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1.5, 2.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Shadow:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1.5, 2.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Rock" type="Node2D"]
material = SubResource( 1 )
script = ExtResource( 3 )
attackAt = 0.1

[node name="Shadow" type="Sprite" parent="."]
material = SubResource( 2 )
position = Vector2( -0.18729, -0.039856 )
texture = ExtResource( 1 )
hframes = 6
frame = 1

[node name="Shadow2" type="Sprite" parent="."]
use_parent_material = true
position = Vector2( -0.18729, 2.96014 )
z_index = -1
texture = ExtResource( 1 )
hframes = 6
frame = 2

[node name="Rock" type="Sprite" parent="."]
use_parent_material = true
position = Vector2( -1.5, -1 )
z_index = 1
texture = ExtResource( 2 )
hframes = 13
frame = 2

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 0, -3 )
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
rotation = 1.5708
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Spawn"
anims/Spawn = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true
autostart = true

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
